--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -5,10 +5,22 @@
 @tailwind utilities;
 
 @layer components {
+  .text {
+    @apply text-gray-800 dark:text-gray-100;
+  }
+  .text-secondary {
+    @apply text-gray-700 dark:text-gray-300 text-sm;
+  }
+
+  .bg-secondary {
+    @apply bg-gray-200 dark:bg-gray-700;
+  }
+
   .body {
     @apply text-gray-800 bg-gray-100
     dark:bg-gray-800 dark:text-gray-100;
   }
+
   .btn {
     @apply py-2 px-4 text-gray-800 bg-gray-100 font-semibold rounded-md
    hover:bg-gray-200 dark:hover:bg-gray-700 
