--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -16,6 +16,10 @@
     @apply bg-gray-200 dark:bg-gray-700;
   }
 
+  .border-secondary {
+    @apply border-b-2 border-gray-200 dark:border-gray-600;
+  }
+
   .body {
     @apply text-gray-800 bg-gray-100
     dark:bg-gray-800 dark:text-gray-100;
